src/objects/SomDig_Sachkonto__c.object
<CustomObject>
    <description>ein Hauptbuch-Konto, dass direkt in die Bilanz oder in die Gewinn- und Verlustrechnung eingeht. Wird aus SAP übernommen.</description>
    <fields>
        <fullName>SomDig_Barter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>bezeichnet Gegengeschäft (Auftragstyp &apos;Barter&apos;)</description>
        <inlineHelpText>einchecken, falls Auftragstyp &apos;Barter&apos;</inlineHelpText>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Buchungskreis__c</fullName>
        <description>U-St. Organkreis der Instanz</description>
        <inlineHelpText>U-St. Organkreis der Instanz</inlineHelpText>
        <label>Buchungskreis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0029</fullName>
                    <default>true</default>
                    <label>0029</label>
                </value>
                <value>
                    <fullName>0034</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_FehlerIA__c</fullName>
        <label>Fehler IA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Korrekturbuchung__c</fullName>
        <defaultValue>false</defaultValue>
        <description>zeigt ob es sich um eine Korrekturbuchung handelt</description>
        <inlineHelpText>zeigt ob es sich um eine Korrekturbuchung handelt</inlineHelpText>
        <label>Korrekturbuchung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattung</label>
        <referenceTo>SomDig_Mediagattung__c</referenceTo>
        <relationshipLabel>Sachkonten</relationshipLabel>
        <relationshipName>Sachkonten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsSegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mediagattungs-Segment</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>Sachkonten</relationshipLabel>
        <relationshipName>Sachkonten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_P7S1Konzernmitglied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist dieser Account Teil der ProSieben Sat1 Konzerngruppe?</description>
        <inlineHelpText>Ist dieser Account Teil der ProSieben Sat1 Konzerngruppe?</inlineHelpText>
        <label>P7S1 Konzernmitglied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_SachkontoTyp__c</fullName>
        <description>hier werden die Standard-Sachkonten Typen (Namen) hinterlegt.</description>
        <inlineHelpText>hier werden die Standard-Sachkonten Typen (Namen) hinterlegt.</inlineHelpText>
        <label>Sachkonto-Typ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Durchlaufkonto Fremdmarke (Verb.) (Andere durchlfd.Post)</fullName>
                </value>
                <value>
                    <fullName>Erlöse Dienstleistungen (SUE BRD)</fullName>
                </value>
                <value>
                    <fullName>Forderung Hochrechnung (deb.Ford.aus Ums.-Abg)</fullName>
                </value>
                <value>
                    <fullName>PRAP (PRAP unterjährig)</fullName>
                </value>
                <value>
                    <fullName>UE/Erlöse Online/Internet (Werbeerlöse Internet)</fullName>
                </value>
                <value>
                    <fullName>Erlöse Barter (GG Werbeerlö net.)</fullName>
                </value>
                <value>
                    <fullName>Erlöse IC (WE intern verb.Unt.)</fullName>
                </value>
                <value>
                    <fullName>Korrektur Werbeerlös (fremde Marken) (Korr.WE Intern.BK29)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_SammelIA__c</fullName>
        <description>Zwecks Fatura</description>
        <inlineHelpText>Zwecks Faktura</inlineHelpText>
        <label>Sammel IA</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_VerwendungSachkonto__c</fullName>
        <description>Gibt an, für welchen Geschäftsvorfall dieses Sachkonto standardmäßig verwendet wird.
Sachkonto-Name&amp;SomDig_SachkontoTyp__c als UniqueKey</description>
        <inlineHelpText>Gibt an, für welchen Geschäftsvorfall dieses Sachkonto standardmäßig verwendet wird.
Sachkonto-Name&amp;SomDig_SachkontoTyp__c als UniqueKey</inlineHelpText>
        <label>Verwendung Sachkonto (UniqueKey)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sachkonto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_SachkontoTyp__c</columns>
        <columns>SomDig_Mediagattung__c</columns>
        <columns>SomDig_MediagattungsSegment__c</columns>
        <columns>SomDig_SammelIA__c</columns>
        <columns>SomDig_Korrekturbuchung__c</columns>
        <columns>SomDig_Buchungskreis__c</columns>
        <columns>SomDig_Barter__c</columns>
        <columns>SomDig_P7S1Konzernmitglied__c</columns>
        <columns>SomDig_VerwendungSachkonto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Sachkonto-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sachkonten</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>